--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,12 +41,22 @@ jobs:
          uses: docker/build-push-action@v3
          with:
            # relative path to the place where source code with Dockerfile is located
-           context: ./simple-api
+           context: ../..
            # Note: tags has to be all lower-case
            tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/simple-api
 
        - name: Build image and push database
-           # DO the same for database
+         uses: docker/build-push-action@v3
+         with:
+           # relative path to the place where source code with Dockerfile is located
+           context: ../../DB
+           # Note: tags has to be all lower-case
+           tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/db
 
        - name: Build image and push httpd
-         # DO the same for httpd
+         uses: docker/build-push-action@v3
+         with:
+           # relative path to the place where source code with Dockerfile is located
+           context: ../../HTTP
+           # Note: tags has to be all lower-case
+           tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/http
