--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
          uses: docker/build-push-action@v3
          with:
            # relative path to the place where source code with Dockerfile is located
-           context: ../..
+           context: .
            # Note: tags has to be all lower-case
            tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/simple-api
 
@@ -49,7 +49,7 @@ jobs:
          uses: docker/build-push-action@v3
          with:
            # relative path to the place where source code with Dockerfile is located
-           context: ../../DB
+           context: ./DB
            # Note: tags has to be all lower-case
            tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/db
 
@@ -57,6 +57,6 @@ jobs:
          uses: docker/build-push-action@v3
          with:
            # relative path to the place where source code with Dockerfile is located
-           context: ../../HTTP
+           context: ./HTTP
            # Note: tags has to be all lower-case
            tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/http
