--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: .
            # Note: tags has to be all lower-case
-           tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/simple-api
+           tags:  ${{secrets.DOCKER_USERNAME}}/simple-api
            push: ${{ github.ref == 'refs/heads/main' }}
 
        - name: Build image and push database
@@ -58,7 +58,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./DB
            # Note: tags has to be all lower-case
-           tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/db
+           tags:  ${{secrets.DOCKER_USERNAME}}/db
            push: ${{ github.ref == 'refs/heads/main' }}
 
        - name: Build image and push httpd
@@ -67,5 +67,5 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./HTTP
            # Note: tags has to be all lower-case
-           tags:  ${{secrets.DOCKER_USERNAME}}/tp-devops/http
+           tags:  ${{secrets.DOCKER_USERNAME}}/http
            push: ${{ github.ref == 'refs/heads/main' }}
