--- a/HTTP/my-httpd.conf
+++ b/HTTP/my-httpd.conf
@@ -551,6 +551,6 @@ SSLRandomSeed connect builtin
 
 <VirtualHost *:80>
     ProxyPreserveHost On
-    ProxyPass / http://:8080/
+    ProxyPass / http:/simpleappwbdd:8080/
     ProxyPassReverse / http://simpleappwbdd:8080/
 </VirtualHost>
