--- a/HTTP/my-httpd.conf
+++ b/HTTP/my-httpd.conf
@@ -550,6 +550,7 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 <VirtualHost *:80>
+    ServerName enzo.louni.takima.cloud
     ProxyPreserveHost On
     ProxyPass / http:/simpleappwbdd:8080/
     ProxyPassReverse / http://simpleappwbdd:8080/
