--- a/HTTP/my-httpd.conf
+++ b/HTTP/my-httpd.conf
@@ -551,7 +551,8 @@ SSLRandomSeed connect builtin
 
 <VirtualHost *:80>
     ServerName enzo.louni.takima.cloud
+    ServerAlias localhost
     ProxyPreserveHost On
-    ProxyPass / http:/simpleappwbdd:8080/
+    ProxyPass / http://simpleappwbdd:8080/
     ProxyPassReverse / http://simpleappwbdd:8080/
 </VirtualHost>
