--- a/ansible/roles/db/tasks/main.yml
+++ b/ansible/roles/db/tasks/main.yml
@@ -2,10 +2,10 @@
 # tasks file for roles/db
   - name: Run DB
     community.docker.docker_container:
-      name: db
+      name: postgres
       image: schtoukai/db
       volumes:
-        - ../data:/var/lib/postgresql/data
+        - ./data:/var/lib/postgresql/data
       networks:
         - name: app-network
 
