--- a/Docker-compose/docker-compose.yml
+++ b/Docker-compose/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         container_name: postgres
         build: ../DB/.
         volumes:
-         - ../data:/var/lib/postgresql/data
+         - ./data:/var/lib/postgresql/data
         networks:
          - my-network
 
